# flashy

./: .env  Cargo.toml  README.md  database_sql_script.sql
.sqlx/: query-02aee9877333d379a0af50f39603021c1cbb1ed99ffbece2ed5fc609b416016e.json  query-e70da86598428d97c2e8e1fc8c68fa99f50a5b6fd435c6c108f109536338ae7b.json
configuration/: config.yaml
migrations/: 20240223071414_creator.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: card.rs  deck.rs  deckset.rs  mod.rs  new_card.rs
src/tui/: app.rs  event_handler.rs  mod.rs  tui_run.rs  utils.rs
src/tui/panes/: alertpopup.rs  confirm.rs  mod.rs  statusbar.rs
src/tui/screens/: create_card.rs  create_deck.rs  main_screen.rs  mod.rs  statusbar.rs
tests/api/: integration_tests.rs
