[package]
name = "flashy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
crossterm = "0.27.0"
ratatui = "0.26.1"
secrecy = { version="0.8.0", features=["serde"] }
serde = "1.0.197"
tokio = "1.36.0"
uuid = { version = "1.7.0", features = ["v4", "serde" ] }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "macros",
]
